--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!doctype html>
 <html class="scroll-smooth" lang="en">
  <head> 
-  <script defer src="rw/elements/com.realmac.corepack/alpine-collapse.js?rwcache=778540926"></script> 
-  <script defer src="rw/elements/com.realmac.corepack/alpine-focus.js?rwcache=778540926"></script> 
-  <script defer src="rw/elements/com.realmac.corepack/alpine-intersect.js?rwcache=778540926"></script> 
-  <script defer src="rw/elements/com.realmac.corepack/alpine-ui.js?rwcache=778540926"></script> 
-  <script defer src="rw/elements/com.realmac.corepack/alpine.js?rwcache=778540926"></script> 
-  <script src="rw/elements/com.realmac.corepack/smoothscroll.min.js?rwcache=778540926"></script> 
-  <script src="rw/elements/com.realmac.corepack/gsap.min.js?rwcache=778540926"></script> 
-  <script src="rw/elements/com.realmac.corepack/ScrollTrigger.min.js?rwcache=778540926"></script> 
-  <script src="rw/elements/com.realmac.corepack/gsap-effects.js?rwcache=778540926"></script> 
+  <script defer src="rw/elements/com.realmac.corepack/alpine-collapse.js?rwcache=780260516"></script> 
+  <script defer src="rw/elements/com.realmac.corepack/alpine-focus.js?rwcache=780260516"></script> 
+  <script defer src="rw/elements/com.realmac.corepack/alpine-intersect.js?rwcache=780260516"></script> 
+  <script defer src="rw/elements/com.realmac.corepack/alpine-ui.js?rwcache=780260516"></script> 
+  <script defer src="rw/elements/com.realmac.corepack/alpine.js?rwcache=780260516"></script> 
+  <script src="rw/elements/com.realmac.corepack/smoothscroll.min.js?rwcache=780260516"></script> 
+  <script src="rw/elements/com.realmac.corepack/gsap.min.js?rwcache=780260516"></script> 
+  <script src="rw/elements/com.realmac.corepack/ScrollTrigger.min.js?rwcache=780260516"></script> 
+  <script src="rw/elements/com.realmac.corepack/gsap-effects.js?rwcache=780260516"></script> 
   <script id="form-script-tag-20205493" src="https://printcrew.systeme.io/public/remote/page/32713269c924a6473ac74d9cce3c7565cf2fd2e7.js"></script> 
   <meta charset="utf-8" /> 
   <meta http-equiv="x-ua-compatible" content="ie=edge" /> 
@@ -26,13 +26,7 @@
   <meta property="og:image" content="https://theprintcrew.com/resources/the_print_crew.png" /> 
   <meta property="og:url" content="https://theprintcrew.com/" /> 
   <title>The Print Crew</title> 
-  <link href="index.css?rwcache=778540926" media="all" rel="stylesheet" type="text/css" /> 
-  <script src="rw/elements/com.realmac.corepack/effectsTransforms.js?rwcache=778540926"></script> 
-  <script src="rw/elements/com.realmac.corepack/modal.js?rwcache=778540926"></script> 
-  <script src="rw/elements/com.realmac.corepack/alpine-store-filters.js?rwcache=778540926"></script> 
-  <script src="rw/elements/com.realmac.corepack/alpine-store-transitions.js?rwcache=778540926"></script> 
-  <script src="rw/elements/com.realmac.corepack/alpine-exit-intent.js?rwcache=778540926"></script> 
-  <script src="rw/elements/com.realmac.corepack/image-lightbox.js?rwcache=778540926"></script> 
+  <link href="index.css?rwcache=780260516" media="all" rel="stylesheet" type="text/css" /> 
   <style lang="css">
     /* Required for alpine.js x-cloak directive to work */
     [x-cloak] {
@@ -58,7 +52,13 @@
         /* Firefox */
     }
 </style> 
-  <link rel="stylesheet" type="text/css" media="all" href="rw/styles/consolidated.css?rwcache=778540926" /> 
+  <script src="rw/elements/com.realmac.corepack/effectsTransforms.js?rwcache=780260516"></script> 
+  <script src="rw/elements/com.realmac.corepack/modal.js?rwcache=780260516"></script> 
+  <script src="rw/elements/com.realmac.corepack/alpine-store-filters.js?rwcache=780260516"></script> 
+  <script src="rw/elements/com.realmac.corepack/alpine-store-transitions.js?rwcache=780260516"></script> 
+  <script src="rw/elements/com.realmac.corepack/alpine-exit-intent.js?rwcache=780260516"></script> 
+  <script src="rw/elements/com.realmac.corepack/image-lightbox.js?rwcache=780260516"></script> 
+  <link rel="stylesheet" type="text/css" media="all" href="rw/styles/consolidated.css?rwcache=780260516" /> 
  </head> 
  <body class="bg-white-50"> 
   <nav class="rwD52733DC_9EFA_42A3_BB71_8888AA39084A group/container group/rwD52733DC_9EFA_42A3_BB71_8888AA39084A [&amp;>*]:col-start-1 [&amp;>*]:row-start-1 isolate grid w-full h-auto mt-0 mb-0 ml-auto mr-auto" data-filter-tags="" id=""> 
@@ -80,7 +80,8 @@
     <h1 class="[&amp;_a]:text-brand-500 [&amp;_a]:no-underline [&amp;_a]:font-[400] [&amp;_a:hover]:text-brand-800 [&amp;_a:hover]:no-underline [&amp;_a:hover]:font-[400] [&amp;_a:visited]:text-brand-800 [&amp;_a:visited]:no-underline [&amp;_a:visited]:font-[400] max-w-[8och] block w-auto h-auto mt-0 mb-0 ml-auto mr-auto pt-0 pb-0 pl-0 pr-0 text-text-800 text-opacity-[100%] dark:text-opacity-[100%] font-heading text-6xl font-[700] tracking-normal leading-tight not-italic text-shadow-none normal-case whitespace-none text-center" id=""> Empowering growth.<br />One <span class="text-gold-500">Entrepreneur</span> at a time. </h1>
     <h2 class="[&amp;_a]:text-brand-500 [&amp;_a]:no-underline [&amp;_a]:font-[400] [&amp;_a:hover]:text-brand-800 [&amp;_a:hover]:no-underline [&amp;_a:hover]:font-[400] [&amp;_a:visited]:text-brand-800 [&amp;_a:visited]:no-underline [&amp;_a:visited]:font-[400] max-w-[80ch] block w-auto h-auto mt-0 mb-0 ml-auto mr-auto pt-0 pb-0 pl-0 pr-0 text-text-600 text-opacity-[100%] dark:text-opacity-[100%] font-heading text-lg font-[400] tracking-normal leading-normal not-italic text-shadow-none normal-case whitespace-none text-center" id=""> Tired of Feeling Like You’re Building Your Print Shop Alone?<br />Join The Print Crew — A Private Community for Print Entrepreneurs Who Want to Grow with Confidence, Clarity, and Community. </h2>
     <div class="group/rwD401C89D_915C_44EF_B5D8_C226C7AEC53C group/flex transform flex w-full h-auto gap-x-3 gap-y-3 flex-col sm:flex-row flex-nowrap items-center justify-items-normal content-normal justify-center" data-filter-tags="" id=""> 
-     <a class="group/button group/rw5ECC16F1_3B8F_440A_88B0_80FA3EFEEBA6 flex items-center cursor-pointer block w-auto h-auto mt-0 mb-0 ml-0 mr-0 pt-2.5 pb-2.5 pl-5 pr-5 transition-all duration-[300ms] delay-[0ms] ease-in-out bg-gold-500 bg-opacity-[100%] dark:bg-opacity-[100%] hover:bg-gold-600 hover:bg-opacity-[100%] dark:hover:bg-opacity-[100%] border-t-0 border-r-0 border-b-0 border-l-0 border-solid rounded-tl rounded-tr rounded-bl rounded-br border-brand-600/[100%] justify-center text-surface-950 text-opacity-[100%] dark:text-opacity-[100%] font-body text-base text-shadow-none font-[600] leading-normal tracking-normal normal-case hover:text-surface-950 hover:text-opacity-[100%] dark:hover:text-opacity-[100%] hover:text-shadow-none" href="#more" id="" target=""> Learn more </a> 
+     <a class="group/button group/rw5ECC16F1_3B8F_440A_88B0_80FA3EFEEBA6 flex items-center cursor-pointer block w-auto h-auto mt-0 mb-0 ml-0 mr-0 pt-2.5 pb-2.5 pl-5 pr-5 transition-all duration-[300ms] delay-[0ms] ease-in-out bg-gold-500 bg-opacity-[100%] dark:bg-opacity-[100%] hover:bg-gold-600 hover:bg-opacity-[100%] dark:hover:bg-opacity-[100%] border-t-2 border-r-2 border-b-2 border-l-2 border-solid rounded-tl rounded-tr rounded-bl rounded-br border-gold-500/[100%] justify-center text-surface-950 text-opacity-[100%] dark:text-opacity-[100%] font-body text-base text-shadow-none font-[600] leading-normal tracking-normal normal-case hover:text-surface-950 hover:text-opacity-[100%] dark:hover:text-opacity-[100%] hover:text-shadow-none" href="#more" id="" target=""> Learn more </a>
+     <a class="group/button group/rw3EB2FD2B_AD98_4629_BEB6_DF6D37E5FA82 flex items-center cursor-pointer block w-auto h-auto mt-0 mb-0 ml-0 mr-0 pt-2.5 pb-2.5 pl-5 pr-5 border-t-2 border-r-2 border-b-2 border-l-2 border-solid rounded-tl rounded-tr rounded-bl rounded-br border-gold-600/[100%] justify-center text-gold-500 text-opacity-[100%] dark:text-opacity-[100%] font-body text-base text-shadow-none font-[600] leading-normal tracking-normal normal-case hover:text-gold-500 hover:text-opacity-[100%] dark:hover:text-opacity-[100%] hover:text-shadow-none" href="#more" id="" target=""> Join now </a> 
     </div>
    </div> 
    <div class="z-0 transform-gpu bg-surface-950 bg-opacity-[100%] dark:bg-opacity-[100%] overflow-hidden"> 
